Ensure gradient filter rendering on IE 8&9
When using 'progid:DXImageTransform.Microsoft.gradient', we need to
expand shorthands like `#abc` as IE doesn't accept them.
Also maximizing tolerance to color value input, no matter if
3 or 6 digit hex, `rgb()` or `rgba()`.

Before: https://phabricator.wikimedia.org/F3285953
After: https://phabricator.wikimedia.org/F3286021

Bug: T124901

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -68,7 +68,12 @@
 	background-image: -webkit-linear-gradient(       top, @start 0, @stop 100% );
 	background-image:    -moz-linear-gradient(       top, @start 0, @stop 100% );
 	background-image:         linear-gradient( to bottom, @start 0, @stop 100% );
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='@{start}', endColorstr='@{stop}' )";
+	// Maximize tolerance of color values input.
+	// Also expand shorthands like `#abc` to `#ffaabbcc`, as IE's proprietary gradient filter doesn't
+	// accept them.
+	@start-ie: argb( rgba( red( @start ), green( @start ), blue( @start ), alpha( @start ) ) );
+	@stop-ie: argb( rgba( red( @stop ), green( @stop ), blue( @stop ), alpha( @stop ) ) );
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='@{start-ie}', endColorstr='@{stop-ie}' )";
 }
 
 .oo-ui-unselectable() {
